--- a/leftwm-core/Cargo.toml
+++ b/leftwm-core/Cargo.toml
@@ -22,7 +22,9 @@ signal-hook = "0.3.4"
 thiserror = "1.0.30"
 tokio = { version = "1.2.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
 x11-dl = "2.18.4"
+xrandr = "0.1.1"
 xdg = "2.2.0"
+anyhow = "1.0"
 
 [dev-dependencies]
 tempfile = "3.2.0"
