--- a/leftwm/Cargo.toml
+++ b/leftwm/Cargo.toml
@@ -37,6 +37,7 @@ time_leftwm = {package = "time", version = "0.3.7", features = ["macros", "forma
 tokio = { version = "1.2.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
 toml = "0.5.5"
 x11-dl = "2.18.4"
+xrandr = "0.1.1"
 xdg = "2.2.0"
 
 [dev-dependencies]
